# minno-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yaml
src/: chars.rs  from_hangeul.rs  lib.rs  to_hangeul.rs
tests/: from_hangeul.rs  to_hangeul.rs
